RESOLVED FIXED305300
REGRESSION(288800@main): [WebDriver] Use-after-free logging host in WebDriver::WebDriverService::run()
https://bugs.webkit.org/show_bug.cgi?id=305300
Summary REGRESSION(288800@main): [WebDriver] Use-after-free logging host in WebDriver...
David Kilzer (:ddkilzer)
Reported 2026-01-11 16:38:45 PST
Use-after-free logging non-"local" host in WebDriver::WebDriverService::run(). Found by LIFETIME_BOUND changes in PR <https://github.com/WebKit/WebKit/pull/56423> for Bug 305278. Regressed in 288800@main for: - [WPE][WebDriver] Do not use a default port number for the BiDi WebSocket server - <https://bugs.webkit.org/show_bug.cgi?id=285625> - <https://commits.webkit.org/288800@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-11 16:43:29 PST
David Kilzer (:ddkilzer)
Comment 2 2026-01-11 16:44:02 PST
EWS
Comment 3 2026-01-12 08:54:35 PST
Committed 305469@main (ebb55ac14d65): <https://commits.webkit.org/305469@main> Reviewed commits have been landed. Closing PR #56429 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.