REGRESSION(288800@main): [WebDriver] Use-after-free logging host in WebDriver::WebDriverService::run() <https://bugs.webkit.org/show_bug.cgi?id=305300>

Reviewed by Carlos Garcia Campos.

* Source/WebDriver/WebDriverService.cpp:
(WebDriver::WebDriverService::run):
- Store CString on the stack to fix the bug.

Canonical link: https://commits.webkit.org/305469@main